--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -86,3 +86,57 @@ background-color:moccasin;
 	text-align: center;
 
 }
+
+.logo{
+	width: 30px;
+}
+
+#footerP{
+	color: white;
+	text-align: right;
+	font-family: 'Gochi Hand', cursive;
+	font-size: 2em;
+}
+
+.title{
+	font-family: 'Gochi Hand', cursive;}
+.title2{
+	font-family: 'Gochi Hand', cursive;
+	color:white;}
+
+.mainbody2{
+	background-color: #5bbbd3;
+	margin-top: 10px;
+
+	padding: 15px;
+	border-radius: 25px;
+}
+
+#adoptions{
+	font-family: 'Gochi Hand', cursive;
+	color:#5bbbd3;
+	font-size: 100px;
+	text-align: center;}
+
+.p2{
+
+	color:white;
+}
+
+#dogbutton2, #catbutton2{
+	height: 180px;
+	margin-left: 10%;
+}
+
+.list{
+	border: dashed 3px white;
+	padding: 20px 25px 5px 25px;
+	border-radius: 25px;
+	margin-bottom: 20px;
+}
+
+#furryImg{
+	width:400px;
+	margin-left:10%;
+	margin-bottom: 20px;
+}
