--- a/views/adopt.handlebars
+++ b/views/adopt.handlebars
@@ -91,11 +91,32 @@
 						    <div class="col-sm-offset-2 col-sm-10">
 						      <button type="submit" class="btn btn-default">List It!</button>
 						   
-					
-						      <button type="button" class="btn btn-default">New User</button>
+
+
+						      <button type="button" class="btn btn-default" action="/login/create" method="POST">New User</button>
 
 						  </div></div>
 						</form>
+				
+<form class="create-update-form" action="login/create" method="POST">
+					  <div class="form-group">
+					    <label for="un">Username:</label>
+					    <input type="text" id="un" name="users_name">
+					  </div>
+
+					  <div class="form-group">
+					    <label for="em">Email:</label>
+					    <input type="text" id="em" name="email_address">
+					  </div>
+
+					  <div class="form-group">
+					    <label for="pass">Password:</label>
+					    <input type="password" id="pass" name="password">
+					  </div>
+
+					  <button type="submit">Sign Up!</button>
+					</form>
+
 				
 					</div>
 
