--- a/views/adopt.handlebars
+++ b/views/adopt.handlebars
@@ -1,14 +1,14 @@
 <div class="container-fluid" >
 
-		<div class="row" >	
-			
+		<div class="row" >
+
 				<div class="col-md-12" ><h1 id="adoptions">Adoptions</h1>
 		</div>
 		</div>
 
 			<div class="row" >
 
-		
+
 
 				<div class="col-md-1"></div>
 				<div class="col-md-7" id="divtxt">
@@ -20,7 +20,7 @@
 					Be calm and patient with your new pet.  Realize that a new environment can take some getting used to and he or she may act differently once acclimated to their new home.  Certain words, objects, or situations may bring about a reaction that you weren't expecting.  The new family member may or may not have been previously trained in the same manner that you wish to train them.  Read some tips on what to do before you bring a pet home, during the first couple of days, and beyond.
 					</p><br/></div><hr>
 
-					
+
 
 					<div >
 						<h1 class="title">What to bring to the Animal Shelter</h1>
@@ -43,7 +43,7 @@
 
 				<div class="col-md-3" id="divtxt">
 
-					
+
 					<div class="mainbody">
 						<p id="furryData">
 						<h1 id="furry">Furry friend of the Month</h1>
@@ -51,9 +51,9 @@
 						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis placerat nulla et enim dapibus vestibulum. Morbi luctus ornare ante lacinia egestas. Nam hendrerit diam dolor, sed blandit sem iaculis sed. Nam vitae elementum mauris. Suspendisse leo ex, laoreet sed lorem cursus, blandit tempor risus. Proin eget eros luctus, gravida velit ac, imperdiet eros. Pellentesque efficitur turpis quis leo blandit, quis tempor lectus vestibulum. Etiam non dictum enim. Donec augue sem, commodo vel elementum ut, sagittis in leo. Ut id ullamcorper dui. Sed interdum imperdiet neque, facilisis varius massa. Maecenas sollicitudin massa in augue dapibus auctor.</p>
 					</div>
 
-					
+
 				</div>
-				
+
 			</div>
 		</div>
 
@@ -62,7 +62,7 @@
 				<div class="col-md-1"></div>
 
 				<div class="col-md-4">
-			
+
 				<form class="form-horizontal list">
 
 						<h1 class="title" style="text-align:center;">List a Pet</h1>
@@ -90,16 +90,35 @@
 						  <div class="form-group">
 						    <div class="col-sm-offset-2 col-sm-10">
 						      <button type="submit" class="btn btn-default">List It!</button>
-						   
-					
-						      <button type="button" class="btn btn-default">New User</button>
 
-						  </div></div>
+
+						      <button type="button" class="btn btn-default" action="/login/create" method="POST">New User</button>
+
+						  </div>
 						</form>
 				
+<form class="create-update-form" action="login/create" method="POST">
+					  <div class="form-group">
+					    <label for="un">Username:</label>
+					    <input type="text" id="un" name="users_name">
+					  </div>
+
+					  <div class="form-group">
+					    <label for="em">Email:</label>
+					    <input type="text" id="em" name="email_address">
+					  </div>
+
+					  <div class="form-group">
+					    <label for="pass">Password:</label>
+					    <input type="password" id="pass" name="password">
+					  </div>
+
+					  <button type="submit">Sign Up!</button>
+					</form>
+
 					</div>
 
-				<div class="col-md-1"></div>	
+				<div class="col-md-1"></div>
 
 				<div class="col-md-4 mainbody2">
 					<form> <h1 class="title" style="text-align:center; color:white;">Find a Pet</h1>
@@ -145,10 +164,10 @@
 
   				<button type="submit" class="btn btn-default" id="searchB">Search</button>
 
-  				</form>	
+  				</form>
 			</div>
 		</div>
-			
+
 		</div>
 
 		<div class="container-fluid" >
