--- a/views/adopt.handlebars
+++ b/views/adopt.handlebars
@@ -96,26 +96,6 @@
 
 						  </div>
 						</form>
-				
-<form class="create-update-form" action="login/create" method="POST">
-					  <div class="form-group">
-					    <label for="un">Username:</label>
-					    <input type="text" id="un" name="users_name">
-					  </div>
-
-					  <div class="form-group">
-					    <label for="em">Email:</label>
-					    <input type="text" id="em" name="email_address">
-					  </div>
-
-					  <div class="form-group">
-					    <label for="pass">Password:</label>
-					    <input type="password" id="pass" name="password">
-					  </div>
-
-					  <button type="submit">Sign Up!</button>
-					</form>
-
 					</div>
 
 				<div class="col-md-1"></div>
@@ -179,4 +159,51 @@
 				</div>
 
 			</div>
+		
+<!-- Working database input -->
+    <form class="create-update-form" action="login/create" method="POST">
+                  <div class="form-group">
+                    <label for="un">Username:</label>
+                    <input type="text" id="un" name="users_name">
+                  </div>
+
+                  <div class="form-group">
+                    <label for="em">Email:</label>
+                    <input type="text" id="em" name="email_address">
+                  </div>
+
+                  <div class="form-group">
+                    <label for="pass">Password:</label>
+                    <input type="password" id="pass" name="password">
+                  </div>
+                
+                  <div class="form-group">
+                    <label for="age">Age:</label>
+                    <input type="age" id="age" name="age">
+                  </div>
+
+                  <div class="form-group">
+                    <label for="addr">address:</label>
+                    <input type="address" id="addr" name="address">
+                  </div>
+
+                  <div class="form-group">
+                    <label for="phone">Phone:</label>
+                    <input type="phone" id="phone" name="phone">
+                  </div>
+
+                  <div class="form-group">
+                    <label for="zip">Zip Code:</label>
+                    <input type="zip" id="zip" name="zip">
+                  </div>
+
+                  <div class="form-group">
+                    <label for="locat">Pet Location:</label>
+                    <input type="location" id="location" name="location">
+                  </div>
+
+                  <button type="submit">Sign Up!</button>
+                </form>
+
+
 		</div>
