Changed address and phone Model from INTERGER to STRING

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -37,6 +37,11 @@
 
 	<div class="col-md-2">
 		<img src="assets/img/headerpic.png" id="headerpic">
+	</div>
+	<div class="col-md-1">
+	{{#if username}}
+  		<p>Welcome {{username}}!</p>
+	{{/if}}
 	</div>				
 </div>
 
