--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,48 +1,51 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
 	<link href="https://fonts.googleapis.com/css?family=Gochi+Hand" rel="stylesheet">
 
-<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<!--my css page linked-->
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
-	<title></title>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+	<title>Furgot Me Not</title>
 </head>
+
 <body>
 
 <!--this will contain the header and it's menu-->
 
 
 <div class="container-fluid" id="header"> 
-	<div class="col-md-1">
-	</div>
+
+	<div class="col-md-1"></div>
+
 	<div class="col-md-2">
-		<img id="smallLogo" src="assets/img/smallogo.svg">
+					<img id="smallLogo" src="assets/img/smallogo.svg">
 	</div>
 
-	<div class="col-md-4" id="menu">
+	<div class="col-md-6" id="menu">
 				
-		<!--links inside the page-->
-		<a class="menuItem" href="/adopt">Adoption</a>
-		<a class="menuItem" href="/login">Login</a>
-		<a class="menuItem" href="/donate">Donate</a>
+		 		 	
+	<!--links inside the page-->
+	<a class="menuItem" href="/adopt">Adoption</a>
+	<a class="menuItem" href="/new">Login</a>
+	<a class="menuItem" href="/donate">Donate</a>
 
 	</div>
 
 	<div class="col-md-2">
 		<img src="assets/img/headerpic.png" id="headerpic">
-	</div>
-	<div class="col-md-1">
-	{{#if username}}
-  		<p>Welcome {{username}}!</p>
-	{{/if}}
-	</div>				
+	</div>	
+
+			
 </div>
 
 			{{{body}}}
@@ -54,13 +57,19 @@
 <div class="container-fluid">			
 	<div class="row" id="footer">
 		<div class="col-md-2" >
-		    <p id="footerP"> Follow Us</p>
+			<p id="footerP"> Follow Us</p>
+
+	           
+				<img class="logo" src="assets/img/fb.png">
+	        	<img class="logo" src="assets/img/instagram.png">
+	        	<img class="logo" src="assets/img/twitter.png">
+	        	<img class="logo" src="assets/img/pinterest.png">
 		</div>
-		<div class="col-md-2" >
-			<img class="logo" src="assets/img/fb.png">
-			<img class="logo" src="assets/img/instagram.png">
-			<img class="logo" src="assets/img/twitter.png">
-			<img class="logo" src="assets/img/pinterest.png">
+
+		<div class="col-md-8" id="disclaimer">
+	    	<p>DISCLAIMER
+				FurgotMeNot is a tool to assist Adopters, Organizations and Adoptees in the process of placing pets in need into the best forever homes.  The site is updated regularly, but unfortunately no information on our site can be guaranteed as it still requires user input for completed adoptions and pet availability. It is crucial that any pet found through an adoption service be thoroughly examined by a veterinarian immediately upon adoption. Any pets found, adopted through, or listed in FurgotMeNot are the sole responsibility of the adoption organizations and/or the adopting party.
+				FurgotMeNot accepts no responsibility for any liability or for any injury or damages to any person or property caused by any listed pet, as well as any cause of action, claims, suits or demands whatsoever that may arise as a result of such injury or damage.</p>
 		</div>
 	</div>
 </div>
