Changed Database to be something I could make work in remaining time, Created Listpet page

--- a/views/adopt.handlebars
+++ b/views/adopt.handlebars
@@ -65,7 +65,8 @@
 
 							<h1 class="adoptions2">list a pet </h1>
 						    <div class="col-sm-offset-2 col-sm-10">
-						      <button type="submit" class="btn btn-lg" id="listItB">List It!</button>
+						    	<a href="/listpet">
+						      <button type="submit" class="btn btn-lg" id="listItB" >List Now!</button></a>
 
 						  </div>
 				</div>
