--- a/views/newuser.handlebars
+++ b/views/newuser.handlebars
@@ -79,12 +79,12 @@
                   
 
 
-                  <form  action="login/check" method="POST">
+                  <form action="login/check" method="POST">
 
 
                   <div class="form-group row">
                     <div class="col-md-5" >
-                      <label for="un" class="col-sm-4 control-label">Username:</label>
+                      <label for="un" class="col-sm-4 control-label">User:</label>
                       <input type="text" id="un" name="users_name">
                     </div>
                   </div>
