--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -43,31 +43,28 @@
 
 				<div class="col-md-1"></div>
 				<div class="col-md-4">
-					<form class="form-horizontal list">
+					<form class="form-horizontal list" action="login/check" method="POST">
 						<div class="form-group">
-						    <label for="inputEmail3" class="col-sm-2 control-label">Email: </label>
+						    <label for="inputEmail3" class="col-sm-2 control-label">Username: </label>
+
 						    <div class="col-sm-10">
-						      <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
+						      <input type="text" id="un" name="users_name" class="form-control" id="inputEmail3">
 						    </div>
 						</div>
+
 						  <div class="form-group">
 						    <label for="inputPassword3" class="col-sm-2 control-label">Password: </label>
 						    <div class="col-sm-10">
-						      <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
+						      <input type="password" id="inputPassword3" name="password">
 						    </div>
 						  </div>
 						  <div class="form-group">
 						    <div class="col-sm-offset-2 col-sm-10">
-						      <div class="checkbox">
-						        <label>
-						          <input type="checkbox"> Remember me
-						        </label>
-						      </div>
 						    </div>
 						  </div>
 						  <div class="form-group">
 						    <div class="col-sm-offset-2 col-sm-10">
-						      <button type="submit" class="btn btn-default">Sign in</button>
+						      <button type="submit" class="btn btn-default">Log In!</button>
 						    </div>
 						  </div>
 						</form>
