Final Commit before video

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -106,6 +106,16 @@ background-color:moccasin;
 	font-family: 'Gochi Hand', cursive;
 
 }
+.furryTitle{
+	text-align: 	left;	
+	font-family: 	'Gochi Hand', cursive;
+}
+
+
+#furryImg{
+	width: 80%;
+	margin-left: 	10%;
+}
 #dg1{
 	margin-bottom: 20px;
 }
@@ -174,13 +184,17 @@ background-color:moccasin;
 	color:white;
 	font-size:10px;
 }
+
+#dogFooter{
+	margin-bottom: 	20px;
+}
 .p2{
 
 	color:white;
 }
 
 #dogbutton2, #catbutton2{
-	height: 180px;
+	height: spx;
 	margin-left: 10%;
 }
 
