--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -21,33 +21,12 @@
 						<a href="#"><img src="assets/img/dogbutton.svg" alt="dog button"></a>
 						<a href="#"><img id="catbutton" src="assets/img/catbutton.svg" alt="cat button"></a>
 					</div>
-					</div>
 
-				<div class="col-md-5" id="divtxt">
-
-					
-					<div class="mainbody">
-						<p id="furryData">
-						<h1 id="furry">Furry friend of the Month</h1>
-						<img class="img-responsive" id="furryImg" src="assets/img/dog1.jpg">
-						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis placerat nulla et enim dapibus vestibulum. Morbi luctus ornare ante lacinia egestas. Nam hendrerit diam dolor, sed blandit sem iaculis sed. Nam vitae elementum mauris. Suspendisse leo ex, laoreet sed lorem cursus, blandit tempor risus. Proin eget eros luctus, gravida velit ac, imperdiet eros. Pellentesque efficitur turpis quis leo blandit, quis tempor lectus vestibulum. Etiam non dictum enim. Donec augue sem, commodo vel elementum ut, sagittis in leo. Ut id ullamcorper dui. Sed interdum imperdiet neque, facilisis varius massa. Maecenas sollicitudin massa in augue dapibus auctor.</p>
-					</div>
-					
-				</div>
-			</div>	
-				
-
-
-		<div class="container-fluid" >
-			<div class = "row">
-
-				<div class="col-md-1"></div>
-				<div class="col-md-4">
 					<form class="form-horizontal list" action="login/check" method="POST">
 						<div class="form-group">
 						    <label for="inputEmail3" class="col-sm-2 control-label">Username: </label>
 
-						    <div class="col-sm-10">
+						    <div class="col-sm-5">
 						      <input type="text" id="un" name="users_name" class="form-control" id="inputEmail3">
 						    </div>
 						</div>
@@ -68,21 +47,70 @@
 						    </div>
 						  </div>
 						</form>
+					</div>
+
+				<div class="col-md-5" id="divtxt">
+
+					
+					<div class="mainbody">
+						<p id="furryData">
+						<h1 id="furry">Furry friend of the Month</h1>
+						<img class="img-responsive" id="furryImg" src="assets/img/cat_1.jpg">
+						<h1 class="furryTitle">KIRK</h1>
+<p>Domestic Short Hair
+Baby • Male • Small
+CATS-CAN 
+Oviedo FL</p>
+
+
+<h1 class="furryTitle">ABOUT KIRK</h1>
+<p>You can fill out an adoption application online on our official website.
+
+Kirk, his three siblings and his mama were dumped on the doorstep on Spay and Save.
+They have been fixed, vacainated and placed in a foster home.
+
+They are very friendly and waiting for their new home with you.</p>
+
+
+
+C.A.T.S.-C.A.N., Inc . is a non-profit organization based in Geneva, Florida. We operate a no-kill shelter and have cats and kittens up for adoption at Oviedo PetsMart. We screen each applicant. Please call or come by to see our kitties - 11:00 - 5:00 every Saturday and most Sunday's Noon to 4:00 at the Oviedo Petsmart adoption event. You can also visit a few of our resident cats every day in the Petsmart Cat room!
+
+Cats-Can Does Not Permit Declawing - For more information on Declawing, please visit our Feline Care Tips Menu on our homepage and visit our webpages of wonderful cats that are already declawed looking for new homes.
+
+
+Know someone who needs low-cost, high-quality spay/neuter services for their pets? Have them contact SpayNSave at 407-920-4894 for clinic dates, information and appointments. We work with feral cats, domestic cats and also offer spay and neuter services for dogs. Contact us today!<br><br>
+
+  
+<strong>MORE ABOUT KIRK
+House trained • Spayed/Neutered • Current on vaccinations • Primary Color(s): Black & White or Tuxedo • Coat Length: Short</strong></p>
+
+
+</p>
+					</div>
+					
 				</div>
+			</div>	
 				
-				<div class="col-md-6">
+
+
+		<div class="container-fluid" >
+			<div class = "row">
+
+				<div class="col-md-1"></div>
+s
+				<div class="col-md-8">
 					<img class="img-responsive" src="assets/img/dg1.svg">
 				</div>
 
 			</div>
 		
-<form class="create-update-form" action="/search" method="POST">
+<!-- <form class="create-update-form" action="/search" method="POST">
 		<div class="form-group">
-            <label for="spec">Species:</label>
-            <input type="species" id="species" name="species">
+            <label for="gen">Type of Pet:</label>
+            <input type="genus" id="genus" name="genus">
         </div>
 
-        <button type="submit">Search!</button>
+        <button type="submit">Search!</button> -->
     </form>
 
                 {{#each result}}
