--- a/views/listpet.handlebars
+++ b/views/listpet.handlebars
@@ -127,7 +127,7 @@
           <div class="col-md-12" ><h1 class="adoptions3">Upload Pictures</h1>
           </div>
           <br>
-          <form id="uploadProfilePicForm" enctype="multipart/form-data" action="/image" method="post">
+          <form id="uploadProfilePicForm" enctype="multipart/form-data" action="/image_one" method="post">
           <div class="form-group row">
             <div class="col-md-5" >
               <label for="un">Picture 1:</label>
@@ -137,7 +137,7 @@
           </div>
           </form> 
 
-          <form id="uploadProfilePicForm" enctype="multipart/form-data" action="/image" method="post">
+          <form id="uploadProfilePicForm" enctype="multipart/form-data" action="/image_two" method="post">
           <div class="form-group row">
             <div class="col-md-5" >
               <label for="un">Picture 2:</label>
@@ -147,7 +147,7 @@
           </div>
           </form> 
 
-          <form id="uploadProfilePicForm" enctype="multipart/form-data" action="/image" method="post">
+          <form id="uploadProfilePicForm" enctype="multipart/form-data" action="/image_three" method="post">
           <div class="form-group row">
             <div class="col-md-5" >
               <label for="un">Picture 3:</label>
@@ -157,7 +157,7 @@
           </div>
           </form> 
 
-          <form id="uploadProfilePicForm" enctype="multipart/form-data" action="/image" method="post">
+          <form id="uploadProfilePicForm" enctype="multipart/form-data" action="/image_four" method="post">
           <div class="form-group row">
             <div class="col-md-5" >
               <label for="un">Picture 4:</label>
@@ -167,7 +167,7 @@
           </div>
           </form> 
 
-          <form id="uploadProfilePicForm" enctype="multipart/form-data" action="/image" method="post">
+          <form id="uploadProfilePicForm" enctype="multipart/form-data" action="/image_five" method="post">
           <div class="form-group row">
             <div class="col-md-5" >
               <label for="un">Picture 5:</label>
