update logo link

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -23,17 +23,17 @@
 <!--this will contain the header and it's menu-->
 
 
-<div class="container-fluid" id="header"> 
+<div class="container-fluid" id="header">
 
 	<div class="col-md-1"></div>
 
 	<div class="col-md-2">
-					<img id="smallLogo" src="assets/img/smallogo.svg">
+					<a href="https://furgot-me-not.herokuapp.com/"><img id="smallLogo" src="assets/img/smallogo.svg">
 	</div>
 
 	<div class="col-md-6" id="menu">
-				
-		 		 	
+
+
 	<!--links inside the page-->
 	<a class="menuItem" href="/adopt">Adoption</a>
 	<a class="menuItem" href="/new">Login</a>
@@ -43,9 +43,9 @@
 
 	<div class="col-md-2">
 		<img src="assets/img/headerpic.png" id="headerpic">
-	</div>	
+	</div>
 
-			
+
 </div>
 
 			{{{body}}}
@@ -54,12 +54,12 @@
 <!-- this contains the footer and it's links-->
 
 
-<div class="container-fluid">			
+<div class="container-fluid">
 	<div class="row" id="footer">
 		<div class="col-md-2" >
 			<p id="footerP"> Follow Us</p>
 
-	           
+
 				<img class="logo" src="assets/img/fb.png">
 	        	<img class="logo" src="assets/img/instagram.png">
 	        	<img class="logo" src="assets/img/twitter.png">
