--- a/views/adopt.handlebars
+++ b/views/adopt.handlebars
@@ -1,14 +1,14 @@
 <div class="container-fluid" >
 
-		<div class="row" >	
-			
+		<div class="row" >
+
 				<div class="col-md-12" ><h1 class="adoptions">Adoptions</h1>
 		</div>
 		</div>
 
 			<div class="row" >
 
-		
+
 
 				<div class="col-md-1"></div>
 				<div class="col-md-7" id="divtxt">
@@ -20,13 +20,13 @@
 					Be calm and patient with your new pet.  Realize that a new environment can take some getting used to and he or she may act differently once acclimated to their new home.  Certain words, objects, or situations may bring about a reaction that you weren't expecting.  The new family member may or may not have been previously trained in the same manner that you wish to train them.  Read some tips on what to do before you bring a pet home, during the first couple of days, and beyond.
 					</p><br/></div><hr>
 
-					
+
 
 					<div >
 						<h1 class="title">What to bring to the Animal Shelter</h1>
 							<h3 >Come prepared!</h3>
 
-								<p >If you rent, we require that you obtain permission from your landlord and understand your pet policies prior to adopting
+								<p >If you rent, we require permissions obtained from your landlord(s) showing acknowledgement of any pet policies associated  prior to adopting
 								A driver's license or other valid photo identification
 								We run adoption fee specials through out the year but standard adoption prices are:
 								<ul >
@@ -43,7 +43,7 @@
 
 				<div class="col-md-3" id="divtxt">
 
-					
+
 					<div class="mainbody">
 						<p id="furryData">
 						<h1 id="furry">Furry friend of the Month</h1>
@@ -53,17 +53,17 @@
 						<p>Dog • Pit Bull Terrier & Staffordshire Bull Terrier Mix • Adult • Male • Medium
 						Furever Bully Love Rescue Orlando, FL</p>
 						<br>
- 
+
 		<h1 class="furryTitle">ABOUT BOSLEY</h1><br>
 		<h3><em>Bosley is now available for adoption!</em></h3>
-		<p>He was originally saved from deathrow at OCAS 3 months ago. He underwent all his medical treatments then was transferred to All Terrain Canine to complete his 6 week board & train program. 
-		Bosley is 2 yrs old male, UTD, neutered & microchipped. He is crate & house trained. Knows basic commands. Although, he has progressed tremendously he still needs time to adjust to other animals in the home. He will need to be the only animal in the home at this time. He does fine w other animals in a public environment. He is currently in Edgewater FL. And is available for meet & greets! 
+		<p>He was originally saved from deathrow at OCAS 3 months ago. He underwent all his medical treatments then was transferred to All Terrain Canine to complete his 6 week board & train program.
+		Bosley is 2 yrs old male, UTD, neutered & microchipped. He is crate & house trained. Knows basic commands. Although, he has progressed tremendously he still needs time to adjust to other animals in the home. He will need to be the only animal in the home at this time. He does fine w other animals in a public environment. He is currently in Edgewater FL. And is available for meet & greets!
 		Don't let his scars fool u.. His split tongue & eye trauma are just examples that your past does NOT define your future!! Please let us know if you would like to meet Bosley!</p>
 					</div>
 
-					
+
 				</div>
-				
+
 			</div>
 		</div>
 
@@ -80,9 +80,9 @@
 
 						  </div>
 				</div>
-						
-				
-					
+
+
+
 
 				<div class="col-md-4 mainbody2">
 					<form> <h1 class="title" style="text-align:center; color:white;">Find a Pet</h1>
@@ -97,7 +97,7 @@
 						  <option id="rodentOpt">Rodent</option>
 					</select>
   			</div>
-  			
+
   			<!--Breed-->
   			<div class="form-group col-sm-5">
    				 <label for="Breed">Breed</label>
@@ -111,10 +111,10 @@
 
   				<button type="submit" class="btn btn-default" id="searchB">Search</button>
 
-  				</form>	
+  				</form>
 			</div>
 		</div>
-			
+
 		</div>
 
 		<div class="container-fluid" >
