--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -14,12 +14,12 @@
 
 					<div class="mainbody">
 					<h1 id="about">Our mission</h1>
-					<p>To use Internet technology and resources to provide adopters and adoptees a safe place to facilitate the adoption process of pets in need.  Our site provides animal lovers the ability to search for a new pet that best fits their family's needs from the comfort of their own home, all while supporting local shelters, rescues and individuals also in need. 
+					<p>To use Internet technology and resources to provide adopters and adoptees a safe place to facilitate the adoption process of pets in need.  Our site provides animal lovers the ability to search for a new pet that best fits their family's needs from the comfort of their own home, all while supporting local shelters, rescues and individuals also in need.
 					FurgotMeNot is an online, searchable database of animals in need of new homes. There are many sites on the web to aid families in locating a new furry family member. Our site provides users access to a directory of nearly 14,000 pets granted by the lists and directories updated daily by PetFinder.com.  However, our primary goal is to also provide an option for individual users and smaller adoption agencies the availability to add their pets in need as well.  Whether it is due to an illness, death in the family, financial crisis or so many other reasons, families often have to re-home a pet also.  This site allows them to list a pet in a safe environment dedicated solely to the safety and security of the pets listed on this site.  </p><br/></div>
 
 					<div id="adoptionb">
 						<a href="#"><img src="assets/img/dogbutton.svg" alt="dog button"></a>
-						<a href="#"><img id="catbutton" src="assets/img/catbutton.svg" alt="cat button"></a>
+						<a href="#"><img id="catButton" src="assets/img/catbutton.svg" alt="cat button"></a>
 					</div>
 
 					<form class="form-horizontal list" action="login/check" method="POST">
@@ -51,7 +51,7 @@
 
 				<div class="col-md-5" id="divtxt">
 
-					
+
 					<div class="mainbody">
 						<p id="furryData">
 						<h1 id="furry">Furry friend of the Month</h1>
@@ -59,7 +59,7 @@
 						<h1 class="furryTitle">KIRK</h1>
 <p>Domestic Short Hair
 Baby • Male • Small
-CATS-CAN 
+CATS-CAN
 Oviedo FL</p>
 
 
@@ -80,17 +80,17 @@ Cats-Can Does Not Permit Declawing - For more information on Declawing, please v
 
 Know someone who needs low-cost, high-quality spay/neuter services for their pets? Have them contact SpayNSave at 407-920-4894 for clinic dates, information and appointments. We work with feral cats, domestic cats and also offer spay and neuter services for dogs. Contact us today!<br><br>
 
-  
+
 <strong>MORE ABOUT KIRK
 House trained • Spayed/Neutered • Current on vaccinations • Primary Color(s): Black & White or Tuxedo • Coat Length: Short</strong></p>
 
 
 </p>
 					</div>
-					
+
 				</div>
-			</div>	
-				
+			</div>
+
 
 
 		<div class="container-fluid" >
@@ -103,7 +103,7 @@ s
 				</div>
 
 			</div>
-		
+
 <!-- <form class="create-update-form" action="/search" method="POST">
 		<div class="form-group">
             <label for="gen">Type of Pet:</label>
@@ -121,6 +121,3 @@ s
 
 
 		</div>
-
-
-	
